--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "jquery": "^3.7.1",
-    "modern-normalize": "^2.0.0"
+    "modern-normalize": "^2.0.0",
+    "swiper": "^11.2.1",
+    "vanilla-infinite-marquee": "^1.0.12"
   }
 }
